--- a/daraja1/templates/home.html
+++ b/daraja1/templates/home.html
@@ -75,9 +75,7 @@
                                     The ultimate playbook on Technology Skill Development<br>
                                      IMPLEMENT THE STRATEGY FOR BUILDING BETTER TEAMS<br>
                                 </p>
-                                <a href="{% url 'test_stk_push_success' %}">pay with mpesa</a>
-
-                                {% comment %} <a href="#" class="btn btn-primary">Read More</a> {% endcomment %}
+                                <a href="#" class="btn btn-primary">Read More</a>
                           </div>
                       </div>
                   </div>
